<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/udacious"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ali_razavi.appportfolio.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:text="@string/title"
            android:textColor="@color/titleTxt"
            android:textSize="24sp" />

        <Button
            android:id="@+id/popularMovies"
            style="@style/btnStyle"
            android:text="@string/app_1" />

        <Button
            android:id="@+id/stockHawk"
            style="@style/btnStyle"
            android:text="@string/app_2" />

        <Button
            android:id="@+id/buildItbigger"
            style="@style/btnStyle"
            android:text="@string/app_3" />

        <Button
            android:id="@+id/makeYourAppMaterial"
            style="@style/btnStyle"
            android:text="@string/app_4" />

        <Button
            android:id="@+id/goUbiquitous"
            style="@style/btnStyle"
            android:text="@string/app_5" />

        <Button
            android:id="@+id/capstone"
            style="@style/btnStyle"
            android:background="@color/capstoneBtnBck"
            android:text="@string/app_6" />
    </LinearLayout>
</ScrollView>
